<resources>
    <string name="app_name">SensorTestApp</string>
    <string name="error_no_sensor">No sensor</string>

    <string name="label_light">Illuminance: %1$.2f</string>
    <string name="label_humidity">Relative Humidity: %1$.1f</string>
    <string name="label_proximity">Proximity: %1$.1f</string>
    <string name="label_temp">Air temperature: %1$.1f</string>
    <string name="label_pressure">Air pressure: %1$.0f</string>
    <string name="label_others">%1$s : %2$.2f %3$s</string>

    <string name="main_label">Sensors in My Device</string>
    <string name="light_label">Light sensor</string>
    <string name="proximity_label">Proximity sensor</string>
    <string name="humidity_label">Humidity sensor</string>
    <string name="temperature_label">Ambient Temperature sensor</string>
    <string name="pressure_label">Air Pressure sensor</string>
    <string name="orientation_label">Device Orientation</string>

    <string name="type">Type</string>
    <string name="unit">Unit</string>
    <string name="description">Description and Uses</string>
    <string name="current_value">Real-time value</string>
    <string name="hardware">Hardware</string>
    <string name="software">Software</string>
    <string name="hint">TextView</string>

    <!-- Text view labels for orientation data -->
    <string name="label_azimuth_string">Azmiuth:</string>
    <string name="label_pitch_string">Pitch:</string>
    <string name="label_roll_string">Roll:</string>

    <!-- String for the orientation values. The %1$.2f part is a placeholder
     that will be filled in at runtime:
     %1 is the value to replace
     $.2f says the value is a float, with two decimal places.  -->
    <string name="value_format">%1$.2f</string>
    <string name="getDeviceButton">Get Device Orientation</string>

</resources>