<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProximityActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:padding="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/description"
            style="@style/TextAppearance.AppCompat.Headline"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Measures the proximity of an object in cm relative to the view screen of a device. This sensor is typically used to determine whether a handset is being held up to a person's ear.\nPhone position during a call."
            android:textSize="16sp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/unit"
            style="@style/TextAppearance.AppCompat.Headline"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="16sp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/current_value"
            style="@style/TextAppearance.AppCompat.Headline"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            />
        <TextView
            android:id="@+id/textSensor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:textColor="#0000FF"
            android:text="@string/label_pressure"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/type"
            style="@style/TextAppearance.AppCompat.Headline"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            />
        <TextView
            android:id="@+id/textSensor2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hardware"
            />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>