<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OrientationActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/label_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <!-- Labels -->
        <TextView
            android:id="@+id/label_azimuth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_azimuth_string"
            style="@style/Label"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="@+id/label_group"/>

        <TextView
            android:id="@+id/label_pitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_pitch_string"
            style="@style/Label"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/label_azimuth"/>

        <TextView
            android:id="@+id/label_roll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_roll_string"
            style="@style/Label"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/label_pitch"/>

        <!-- Values -->
        <TextView
            android:id="@+id/value_azimuth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:text="@string/value_format"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            app:layout_constraintLeft_toRightOf="@id/label_azimuth"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/label_group"/>

        <TextView
            android:id="@+id/value_pitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/value_format"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/value_azimuth"/>

        <TextView
            android:id="@+id/value_roll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/value_format"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/value_pitch"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
    <ImageView
        android:id="@+id/spot_top"
        android:layout_width="84dp"
        android:layout_height="84dp"
        android:layout_margin="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/spot"
        android:alpha="0.05"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/spot_bottom"
        android:layout_width="84dp"
        android:layout_height="84dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:srcCompat="@drawable/spot"
        android:alpha="0.05"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/spot_right"
        android:layout_width="84dp"
        android:layout_height="84dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/spot"
        android:alpha="0.05"
        tools:ignore="ContentDescription"/>

    <ImageView
        android:id="@+id/spot_left"
        android:layout_width="84dp"
        android:layout_height="84dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/spot"
        android:alpha="0.05"
        tools:ignore="ContentDescription" />

</androidx.constraintlayout.widget.ConstraintLayout>